--- a/Luiskart.Escritorio/Vistas/MainWindow.xaml
+++ b/Luiskart.Escritorio/Vistas/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Luiskart.Escritorio.MainWindow"
+﻿<Window x:Class=" Luiskart.Escritorio.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Luiskart.Escritorio"
         mc:Ignorable="d"
-        Title="Luiskart93" Height="660" Width="812.188" ResizeMode="NoResize">
+        Title="Luiskart.Compartido93" Height="660" Width="812.188" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="23*"/>
